--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -67,7 +67,7 @@
                 <br>
                 <h4 style="color:darkgreen">  Society Account Details (500 per month from each villa)</h4>
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen">  Cash Amount at Villa No. 45 / 65</h4>
+                <h4 style="color:darkgreen">  Cash Amount at Villa No. 65</h4>
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
 				<fieldset>
