--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -206,7 +206,7 @@
   list.push("	Villa-67	,Abhishek Jaiman,1000,1000,1000,,,");
   list.push("	Villa-68	,Shrish Jaiman,1000,1000,1000,,,");
   list.push("	Villa-69	,Piyush Sharma,1000,1000,1000,,,");
-  list.push("	Villa-70	,Vineet Sharma,,,,,,");
+  list.push("	Villa-70	,Vineet Sharma,1000,1000,1000,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
   list.push("	Villa-73	,Richa Sharma,,,,,,");
