--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -143,7 +143,7 @@
   list.push("	Villa-4	,Bhupesh Saini,1000,1000,1000,,,");
   list.push("	Villa-5	,Shishir Maltiyar,1000,1000,1000,,,");
   list.push("	Villa-6	,,,,,,,");
-  list.push("	Villa-7	,Rahul Pandey,,,,,,");
+  list.push("	Villa-7	,Rahul Pandey,1000,1000,1000,,,");
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
