--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -148,10 +148,10 @@
         list.push("Gas ki Tanki,Villa 65,-2000,D");
         list.push("Mandir Bhog and Pandit Ji,Villa 65,-550,D");
         list.push("Bhojan Samgri,Villa 65,-10476,D");
-        list.push("Shamiyana\Chairs,Villa 65,-4000,D");
+        list.push("Shamiyana Chairs,Villa 65,-4000,D");
         list.push("Khana banane wale Pandit,Villa 65,-2500,D");
         list.push("Pani Bottle,Villa 65,-800,D");
-        list.push("26 Jan Sweets\Bundi,Villa 65,-1200,D");
+        list.push("26 Jan Sweets Bundi,Villa 65,-1200,D");
         list.push("26 Jan Flag and Flower,Villa 65,-200,D");
 
          generateTable(list)
