--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 									<!--<li><a href="OCDinner.html">OC Status</a></li>-->
 									<!--<li><a href="ViewDoc.html">Documents</a></li>--.
 									<!--<li><a href="SocietyFormation.html">Society Formation</a></li>-->
+                                    <li><a href="SocityFunctionPhoto.html">Activity Photos</a></li>
 									<li><a href="VehicleOwner.html">Villa wise Vehical Details</a></li>
 									<!--<li><a href="Ganpati2020.html">Festival & Celebrations</a></li>-->
 									<!--<li><a href="WaterFine.html">Others</a></li>-->
