--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -209,7 +209,7 @@
   list.push("	Villa-70	,Vineet Sharma,1000,1000,1000,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,,,");
   list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
-  list.push("	Villa-73	,Richa Sharma,,,,,,");
+  list.push("	Villa-73	,Richa Sharma,1000,1000,1000,,,");
   list.push("	Villa-74	,,,,,,,");
   list.push("	Villa-75	,,,,,,,");
   list.push("	Villa-76	,S N Nagal,1000,1000,1000,,,");
