--- a/SocityFunctionPhoto.html
+++ b/SocityFunctionPhoto.html
@@ -70,8 +70,8 @@
     </div>
 
     <p> Republic Day - 26 Jan 2023 </p>
+    <img src="img/Jan26_1.jpg" width="400" height="400" />
     <img src="img/Jan26.jpg" width="400" height="400" />
-
     <p></p>
     <p> Posh Bada Function - 8 Jan 2023 </p>
     <img src="img/Poshbada.jpg" width="400" height="400" />
