--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -145,7 +145,7 @@
   list.push("	Villa-6	,,,,,,,");
   list.push("	Villa-7	,Rahul Pandey,1000,1000,1000,,,");
   list.push("	Villa-8	,,,,,,,");
-  list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
+  list.push("	Villa-9	,Raghvendra Sharma,1000,1000,1000,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
   list.push("	Villa-11	,,,,,,,");
   list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,,,");
