--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -155,7 +155,7 @@
   list.push("	Villa-16	,,,,,,,");
   list.push("	Villa-17	,,,,,,,");
   list.push("	Villa-18	,,,,,,,");
-  list.push("	Villa-19	,,,,,,,");
+  list.push("	Villa-19	,Hitesh Ji,,,,,,");
   list.push("	Villa-20	,Ved Prakash Parashar,,,,,,");
   list.push("	Villa-21	,,,,,,,");
   list.push("	Villa-22	,,,,,,,");
@@ -163,7 +163,7 @@
   list.push("	Villa-24	,Abhimanyu Saraswat,1000,1000,1000,,,");
   list.push("	Villa-25	,,,,,,,");
   list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,,,");
-  list.push("	Villa-27	,Deepesh Sharma,,,,,,");
+  list.push("	Villa-27	,Deepesh Sharma,1000,1000,1000,,,");
   list.push("	Villa-28	,Mohit Juneja,1000,1000,1000,,,");
   list.push("	Villa-29	,,,,,,,");
   list.push("	Villa-30	,,,,,,,");
@@ -208,7 +208,7 @@
   list.push("	Villa-69	,Piyush Sharma,1000,1000,1000,,,");
   list.push("	Villa-70	,Vineet Sharma,1000,1000,1000,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,,,");
-  list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
+  list.push("	Villa-72	,Nikesh Chaudhary,1000,1000,1000,,,");
   list.push("	Villa-73	,Richa Sharma,1000,1000,1000,,,");
   list.push("	Villa-74	,,,,,,,");
   list.push("	Villa-75	,,,,,,,");
