--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -137,6 +137,7 @@
      list.push("Villa-11,@Kuldeep Ji,@9928499998,@5,@Owner"); 
      list.push("Villa-12,@Gaurav Kothari,@9982567222,@2,@Owner"); 
      list.push("Villa-13,@Anil Sharma,@9983344889,@4,@Owner"); 
+     list.push("Villa-19,@Hitesh Ji,@9650978342,@3,@Owner"); 
      list.push("Villa-20,@Ved Prakash Parashar,@9462071435,@3,@Owner"); 
      list.push("Villa-24,@Abhimanyu Saraswat,@9461594523,@4,@Owner"); 
      list.push("Villa-26,@Rakesh Kumar,@9079205061,@3,@Owner"); 
