--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -135,6 +135,7 @@
      list.push("Villa-24,@Abhimanyu Saraswat,@RJ01-CC-3068/ RJ01-CE-0919/ RJ14NC4125,@"); 9461594523
      list.push("Villa-26,@Rakesh Kumar,@RJ45-CH-1989,@"); 9079205061
      list.push("Villa-27,@Deepesh Sharma,@RJ14-CU-6335,@"); 9829192929
+     list.push("Villa-28,@Mohit Juneja,@RJ06-CC-5257,@"); 7014643282
      list.push("Villa-33,@Prakash Joshi,@RJ06-CB-4388,@"); 8128028832
      list.push("Villa-34,@Vijay Meena,@RJ02-CC-5005,@"); 9667392585
      list.push("Villa-37,@Gajendra Sharma,@RJ45-CA-3904,@"); 9166122226
