--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -210,7 +210,7 @@
   list.push("	Villa-69	,Piyush Sharma,500,500,500,,,");
   list.push("	Villa-70	,Vineet Sharma,500,500,500,,,");
   list.push("	Villa-71	,Suresh kumar Sharma,500,500,500,,,");
-  list.push("	Villa-72	,Nikesh Chaudhary,,,,,,");
+  list.push("	Villa-72	,Nikesh Chaudhary,500,500,500,,,");
   list.push("	Villa-73	,Richa Sharma,500,500,500,,,");
   list.push("	Villa-74	,,,,,,,");
   list.push("	Villa-75	,,,,,,,");
