--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -188,7 +188,7 @@
   list.push("	Villa-47	,Manoj Ji,500,500,500,,,");
   list.push("	Villa-48	,R C Sharma,500,500,500,,,");
   list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,Praveen Garg,500,500,500,,,");
+  list.push("	Villa-50	,Ankit Garg,500,500,500,,,");
   list.push("	Villa-51	,,,,,,,");
   list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
   list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
@@ -225,7 +225,7 @@
   list.push("	Villa-84	,,,,,,,");
   list.push("	Villa-85	,Pradeep Verma,500,500,500,,,");
   list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,");
-  list.push("	Villa-87	,,,,,,,");
+  list.push("	Villa-87	,Devendra Singh,,,,,,");
   list.push("	Villa-88	,Pankaj Chauhan,500,500,500,,,");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
