--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -186,7 +186,7 @@
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,,,");
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
   list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,Praveen Garg,,,,,,");
+  list.push("	Villa-50	,Ankit Garg,,,,,,");
   list.push("	Villa-51	,,,,,,,");
   list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,,,");
   list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
@@ -223,7 +223,7 @@
   list.push("	Villa-84	,,,,,,,");
   list.push("	Villa-85	,Pradeep Verma,1000,1000,1000,,,");
   list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,,,");
-  list.push("	Villa-87	,,,,,,,");
+  list.push("	Villa-87	,Devendra Singh,,,,,,");
   list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,,,");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
