--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -155,7 +155,7 @@
      list.push("Villa-46,@Vikas Mahala,@8561811965,@2,@Owner"); 
      list.push("Villa-47,@Manoj Ji,@9460070338,@4,@Owner"); 
      list.push("Villa-48,@R C Sharma ,@7737061033,@3,@Owner"); 
-     list.push("Villa-50,@Praveen Garg,@,@3,@Owner"); 
+     list.push("Villa-50,@Ankit Garg,@9785352955,@3,@Owner"); 
      list.push("Villa-52,@Shailesh Bansal,@9461856524,@4,@Owner"); 
      list.push("Villa-53,@Rohit Jain,@9828576337,@4,@Owner"); 
      list.push("Villa-63,@Yogesh Ji,@8583956466,@4,@Owner"); 
@@ -171,6 +171,7 @@
      list.push("Villa-76,@S N Nagal,@9413769696,@4,@Owner"); 
      list.push("Villa-85,@Pradeep Verma,@,@3,@Owner"); 
      list.push("Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
+     list.push("Villa-87,@Devendra Singh,@9773893352,@3,@Owner"); 
      list.push("Villa-88,@Pankaj Chauhan,@9772525987,@4,@Owner"); 
      
       
