--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -166,6 +166,7 @@
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("Till previous month final balance ,Villa 65,37950,C");
+        list.push("Collection ,Villa 65,1500,C");
         //list.push("C 1 ,Villa 65,10,C");
         //list.push("Expenditure 2 ,Villa 45,-20,D");
 
