--- a/index.html
+++ b/index.html
@@ -105,13 +105,16 @@
 		<p> Event: 18 Feb 2023, Mahashivaratri </p>
    </marquee>
 	
-<p style="color: rgb(5, 97, 27)"><b>18 Feb 2023, Mahashivaratri, Temple decoration 5-6 PM, Prasad from 6:00 PM to onwards, Rudra Abhishek from 2:30 To 4:30 PM, Intersted Villa owners can contact with Shubh Villa temple Pujari ji for Rudra Abhishek. </b></p>
+<p style="color: rgb(5, 97, 27)"><b> 18 Feb 2023, Mahashivaratri Function activity:  </b></p>
+<p style="color: rgb(5, 97, 27)"><b> Rudra Abhishek from 3:00 To 5:30 PM, Intersted Villa owners can contact with Shubh Villa temple Pujari ji for Rudra Abhishek.  </b></p>
+<p style="color: rgb(5, 97, 27)"><b> Temple decoration 5:30 to 6:30 PM.  </b></p>
+<p style="color: rgb(5, 97, 27)"><b> Aarti and Prasad from 6:30 PM to 7:30 PM.  </b></p>
 		
    <!--<marquee behavior="slide" direction="left">
    <img src="img/SV_RD.png" width="400" height="150" />
 	</marquee>-->
         <img class="NO-CACHE" data-src="img/Villa86.jpg" width="110px" heigt="110px" alt="" style="margin-bottom: 22px;">
-		<p style="color: rgb(40, 7, 185)"><b>महाशिवरात्रि की प्रसादी और मंदिर की सजावट सुरेंद्र जी (विला-86) द्वारा प्रायोजित है  " </b></p>
+		<p style="color: rgb(40, 7, 185)"><b>  महाशिवरात्रि की प्रसादी और मंदिर की सजावट सुरेंद्र जी (विला-86) द्वारा प्रायोजित है  " </b></p>
 		<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
 
 		<section class="our_activity">
