--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
    </marquee>
 	
 <p style="color: rgb(5, 97, 27)"><b> _18 Feb 2023, Mahashivaratri Function activity:  </b></p>
-<p style="color: rgb(5, 97, 27)"><b> _1 Rudra Abhishek from 3:00 To 5:30 PM, Intersted Villa owners can contact with Shubh Villa temple Pujari ji for Rudra Abhishek.  </b></p>
+<p style="color: rgb(5, 97, 27)"><b> _1 Rudra Abhishek from 3:00 To 5:30 PM, Intersted villa owners can contact with Shubh villa temple Pujari ji one day before for Rudra Abhishek.  </b></p>
 <p style="color: rgb(5, 97, 27)"><b> _2 Temple decoration 5:30 to 6:30 PM.  </b></p>
 <p style="color: rgb(5, 97, 27)"><b> _3 Aarti and Prasad from 6:30 PM to 7:30 PM.  </b></p>
 		
