--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12" align="center">
-					<img id="myid" class="NO-CACHE" data-src="img/Mahashivratri.jpg"  width="350px" heigt="130px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+					<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 			
 				</div>
 			</div>
@@ -102,19 +102,15 @@
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: 18 Feb 2023, Mahashivaratri </p>
+		<p> Event: Upcoming event Holi Celebration </p>
    </marquee>
 	
-<p style="color: rgb(5, 97, 27)"><b> _18 Feb 2023, Mahashivaratri Function activity:  </b></p>
-<p style="color: rgb(5, 97, 27)"><b> _1 Rudra Abhishek from 3:00 To 5:30 PM, Intersted villa owners can contact with Shubh villa temple Pujari ji one day before for Rudra Abhishek.  </b></p>
-<p style="color: rgb(5, 97, 27)"><b> _2 Temple decoration 5:30 to 6:30 PM.  </b></p>
-<p style="color: rgb(5, 97, 27)"><b> _3 Aarti and Prasad from 6:30 PM to 7:30 PM.  </b></p>
 		
    <!--<marquee behavior="slide" direction="left">
    <img src="img/SV_RD.png" width="400" height="150" />
 	</marquee>-->
-        <img class="NO-CACHE" data-src="img/Villa86.jpg" width="110px" heigt="110px" alt="" style="margin-bottom: 22px;">
-		<p style="color: rgb(40, 7, 185)"><b>  महाशिवरात्रि की प्रसादी और मंदिर की सजावट सुरेंद्र जी (विला-86) द्वारा प्रायोजित है  " </b></p>
+       <!-- <img class="NO-CACHE" data-src="img/Villa86.jpg" width="110px" heigt="110px" alt="" style="margin-bottom: 22px;">
+		<p style="color: rgb(40, 7, 185)"><b>  महाशिवरात्रि की प्रसादी और मंदिर की सजावट सुरेंद्र जी (विला-86) द्वारा प्रायोजित है  " </b></p>-->
 		<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
 
 		<section class="our_activity">
