--- a/SocityFunctionPhoto.html
+++ b/SocityFunctionPhoto.html
@@ -70,6 +70,7 @@
     </div>
 
     <p> Mahashivratri - 18 Feb 2023 </p>
+    <img src="img/Mahashivratri1.jpg" width="400" height="800" />
     <img src="img/Mahashivratri.jpg" width="400" height="800" />
     <p></p>
 
