--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12" align="center">
+					<!--
 					<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
-			
+					-->
 				</div>
 			</div>
 		</div>
@@ -102,9 +103,18 @@
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: Upcoming event Holi Celebration </p>
+		<p> Event: Upcoming event Holi Celebration, 6th & 7th March 2023 </p>
    </marquee>
+
+   <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+
 	
+		<p style= "color:rgb(211, 104, 16)"> Holika Dahan: 6th March 2023, Sharp 6:00 PM</p>
+		<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
+		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 7th March 2023, 9:00 AM TO 12:30 PM </p>
+		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal) and Thandai will available from cultural team</p>
+		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, from 7:00 To 8:00 PM </p>
+
 		
    <!--<marquee behavior="slide" direction="left">
    <img src="img/SV_RD.png" width="400" height="150" />
