--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<img id="myid" class="NO-CACHE" data-src="img/HappyHoli.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 		<p style= "color:rgb(78, 26, 248)"> Holi Celebration: 7th March 2023, 9:00 AM TO 12:30 PM </p>
 		<p style= "color:rgb(238, 10, 150)"> Holi Color (Gulal) and Thandai will available from cultural team</p>
-		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, from 7:00 To 8:00 PM </p>
+		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
 
 		
    <!--<marquee behavior="slide" direction="left">
