--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 									<li><a href="OwnersRentDetails.html">Owners\Tenants Details</a></li>
 									<li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									<li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
+									<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
 									<!--<li><a href="OneTimeCollection.html">One Time Collection</a></li>-->
 									<li><a href="MeetingHistory.html">Meeting History</a></li>
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
