--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -149,7 +149,7 @@
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,,,,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,500,500,500,,,");
-  list.push("	Villa-11	,,,,,,,");
+  list.push("	Villa-11	,Villa 11,500,500,500,,,");
   list.push("	Villa-12	,Gaurav Kothari,500,500,500,,,");
   list.push("	Villa-13	,Anil Sharma,500,500,500,,,");
   list.push("	Villa-14	,,,,,,,");
@@ -225,7 +225,7 @@
   list.push("	Villa-84	,,,,,,,");
   list.push("	Villa-85	,Pradeep Verma,500,500,500,,,");
   list.push("	Villa-86	,Surendra Agrawal,500,500,500,,,");
-  list.push("	Villa-87	,Devendra Singh,,,,,,");
+  list.push("	Villa-87	,Devendra Singh,1500,1500,1500,,,");
   list.push("	Villa-88	,Pankaj Chauhan,500,500,500,,,");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
