--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -141,7 +141,6 @@
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("Previous function balance,Villa 65,4500,C");
         list.push("Collection ,Villa 65,57000,C");
-        //list.push("Collection ,Villa 45,13500,C");
         list.push("PaushBada Extra member collection,Villa 65,400,C");
         list.push("Vegetables,Villa 65,-434,D");
         list.push("Disposal,Villa 65,-980,D");
@@ -181,13 +180,18 @@
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("Till previous month final balance ,Villa 65,39450,C");
-        list.push("Collection ,Villa 51,1500,C");
+        list.push("Collection Villa 51 ,Villa 65,1500,C");
+        list.push("Collection Villa 11 & 87 ,Villa 45,3000,C");
         //list.push("C 1 ,Villa 65,10,C");
         list.push("Holi Dinner Advance ,Villa 65,-5000,D");
         list.push("Holi Color ,Villa 65,-2550,D");
         list.push("Guru Ji Thandai ,Villa 65,-840,D");
         list.push("Sugar ,Villa 65,-50,D");
+        list.push("Holika dahan puja samagri and flowers ,Villa 65,-286,D");
         list.push("Disposable glasses ,Villa 65,-130,D");
+        list.push("Holika dahan lakdi,Villa 65,-920,D");
+        list.push("Holika dahan Puja Sweets,Villa 65,-900,D");
+        list.push("Pandit ji dakshina,Villa 10,-500,D");
 
          generateTable(list)
          SetBalanceColor();
