--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -184,6 +184,7 @@
         list.push("Collection Villa 11 & 87 ,Villa 45,3000,C");
         //list.push("C 1 ,Villa 65,10,C");
         list.push("Holi Dinner Advance ,Villa 65,-5000,D");
+        list.push("Holi Dinner _ Sachdeva Ji ,Villa 65,-21000,D");
         list.push("Holi Color ,Villa 65,-2550,D");
         list.push("Guru Ji Thandai ,Villa 65,-840,D");
         list.push("Sugar ,Villa 65,-50,D");
@@ -191,8 +192,8 @@
         list.push("Disposable glasses ,Villa 65,-130,D");
         list.push("Holika dahan lakdi,Villa 65,-920,D");
         list.push("Holika dahan Puja Sweets,Villa 65,-900,D");
-        list.push("Pandit ji dakshina,Villa 10,-500,D");
-        list.push("Thandai Milk and Sugar,Villa 33,-1050,D");
+        list.push("Pandit ji dakshina,Villa 65,-500,D");
+        list.push("Thandai Milk and Sugar,Villa 65,-1050,D");
 
          generateTable(list)
          SetBalanceColor();
