--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: Upcoming event Holi Celebration, 6th & 7th March 2023 </p>
+		<p> Event: Upcoming event Ram Navmi, 30th March 2023 </p>
    </marquee>
-
+   <marquee behavior="slide" direction="left">
+	<img src="img/Ramnavmi.jpg" width="260" height="170" />
+	 </marquee>
+<!--x
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
 	
@@ -117,9 +120,7 @@
 		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
 
 		
-   <!--<marquee behavior="slide" direction="left">
-   <img src="img/SV_RD.png" width="400" height="150" />
-	</marquee>-->
+
        <!-- <img class="NO-CACHE" data-src="img/Villa86.jpg" width="110px" heigt="110px" alt="" style="margin-bottom: 22px;">
 		<p style="color: rgb(40, 7, 185)"><b>  महाशिवरात्रि की प्रसादी और मंदिर की सजावट सुरेंद्र जी (विला-86) द्वारा प्रायोजित है  " </b></p>-->
 		<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
