--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -180,11 +180,12 @@
          
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("Till previous month final balance ,Villa 65,39450,C");
-        list.push("Collection Villa 51 ,Villa 65,1500,C");
-        list.push("Collection Villa 11 & 87 ,Villa 45,3000,C");
+        //list.push("Collection Villa 51 ,Villa 65,1500,C");
+        list.push("Collection Villa 51 & 11 & 87 ,Villa 65,4500,C");
         //list.push("C 1 ,Villa 65,10,C");
-        list.push("Holi Dinner Advance ,Villa 65,-5000,D");
-        list.push("Holi Dinner _ Sachdeva Ji ,Villa 65,-21000,D");
+        //list.push("Holi Dinner Advance ,Villa 65,-5000,D");
+        list.push("Holi Dinner  ,Villa 65,-30000,D");
+        list.push("Holi dinner Tent ,Villa 65,-3500,D");
         list.push("Holi Color ,Villa 65,-2550,D");
         list.push("Guru Ji Thandai ,Villa 65,-840,D");
         list.push("Sugar ,Villa 65,-50,D");
@@ -194,6 +195,7 @@
         list.push("Holika dahan Puja Sweets,Villa 65,-900,D");
         list.push("Pandit ji dakshina,Villa 65,-500,D");
         list.push("Thandai Milk and Sugar,Villa 65,-1050,D");
+        
 
          generateTable(list)
          SetBalanceColor();
