--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -147,7 +147,7 @@
   list.push("	Villa-8	,,,,,,,");
   list.push("	Villa-9	,Raghvendra Sharma,1000,1000,1000,,,");
   list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,,,");
-  list.push("	Villa-11	,,,,,,,");
+  list.push("	Villa-11	,Villa 11,1000,1000,1000,,,");
   list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,,,");
   list.push("	Villa-13	,Anil Sharma,1000,1000,1000,,,");
   list.push("	Villa-14	,R K Shandilya,1000,1000,1000,,,");
@@ -187,7 +187,7 @@
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,Ankit Garg,,,,,,");
-  list.push("	Villa-51	,,,,,,,");
+  list.push("	Villa-51	,Villa 51,1000,1000,1000,,,");
   list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,,,");
   list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
   list.push("	Villa-54	,,,,,,,");
@@ -223,7 +223,7 @@
   list.push("	Villa-84	,,,,,,,");
   list.push("	Villa-85	,Pradeep Verma,1000,1000,1000,,,");
   list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,,,");
-  list.push("	Villa-87	,Devendra Singh,,,,,,");
+  list.push("	Villa-87	,Devendra Singh,1000,1000,1000,,,");
   list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,,,");
   list.push("	Villa-89	,,,,,,,");
   list.push("	Villa-90	,,,,,,,");
