--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -66,6 +66,7 @@
                 <h4 style="color:darkgreen">  Monthly Maintenance Details (1000 per month from each villa)</h4>
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
                 <h4 style="color:darkgreen">  Cash Amount at Villa No. 45 </h4>
+                <h4 style="color:darkgreen">  1500 Amount at Villa No. 10 / 45 </h4>
                 <br>
                 <h4 style="color:darkgreen">  Final Balance = <span id="TotalCollection"></span> </h4>
 				<fieldset>
@@ -155,7 +156,7 @@
   list.push("	Villa-16	,,,,,,,");
   list.push("	Villa-17	,,,,,,,");
   list.push("	Villa-18	,,,,,,,");
-  list.push("	Villa-19	,Hitesh Ji,,,,,,");
+  list.push("	Villa-19	,Hitesh Ji,1000,1000,1000,,,");
   list.push("	Villa-20	,Ved Prakash Parashar,1000,1000,1000,,,");
   list.push("	Villa-21	,,,,,,,");
   list.push("	Villa-22	,,,,,,,");
