--- a/SocityFunctionPhoto.html
+++ b/SocityFunctionPhoto.html
@@ -69,6 +69,11 @@
         </form>
     </div>
 
+    <p> Holi - 6 and 7 March 2023 </p>
+    <img src="img/Holi1.jpg" width="400" height="500" />
+    <img src="img/Holi2.jpg" width="400" height="500" />
+    <p></p>
+
     <p> Mahashivratri - 18 Feb 2023 </p>
     <img src="img/Mahashivratri1.jpg" width="400" height="800" />
     <img src="img/Mahashivratri.jpg" width="400" height="800" />
