--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -182,9 +182,9 @@
         list.push("Till previous month final balance ,Villa 65,39450,C");
         //list.push("Collection Villa 51 ,Villa 65,1500,C");
         list.push("Collection Villa 51 & 11 & 87 ,Villa 65,4500,C");
-        //list.push("C 1 ,Villa 65,10,C");
+        list.push("Holi dinner Extra member collection Villa 10 & 86,Villa 65,1266,C");
         //list.push("Holi Dinner Advance ,Villa 65,-5000,D");
-        list.push("Holi Dinner  ,Villa 65,-30000,D");
+        list.push("Holi dinner  ,Villa 65,-30000,D");
         list.push("Holi dinner Tent ,Villa 65,-3500,D");
         list.push("Holi Color ,Villa 65,-2550,D");
         list.push("Guru Ji Thandai ,Villa 65,-840,D");
