--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -182,7 +182,7 @@
         list.push("Till previous month final balance ,Villa 65,39450,C");
         //list.push("Collection Villa 51 ,Villa 65,1500,C");
         list.push("Collection Villa 51 & 11 & 87 ,Villa 65,4500,C");
-        list.push("Holi dinner Extra member collection Villa 10 & 86,Villa 65,1266,C");
+        list.push("Holi dinner extra member collection villa 10 & 86,Villa 65,1266,C");
         //list.push("Holi Dinner Advance ,Villa 65,-5000,D");
         list.push("Holi dinner  ,Villa 65,-30000,D");
         list.push("Holi dinner Tent ,Villa 65,-3500,D");
