--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -187,7 +187,7 @@
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,Ankit Garg,,,,,,");
-  list.push("	Villa-51	,Villa 51,1000,1000,1000,,,");
+  list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,,,");
   list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,,,");
   list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
   list.push("	Villa-54	,,,,,,,");
