--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -189,7 +189,7 @@
   list.push("	Villa-48	,R C Sharma,500,500,500,,,");
   list.push("	Villa-49	,,,,,,,");
   list.push("	Villa-50	,Ankit Garg,500,500,500,,,");
-  list.push("	Villa-51	,Villa 51,500,500,500,,,");
+  list.push("	Villa-51	,Jatin Kumar,500,500,500,,,");
   list.push("	Villa-52	,Shailesh Bansal,500,500,500,,,");
   list.push("	Villa-53	,Rohit Jain,500,500,500,,,");
   list.push("	Villa-54	,,,,,,,");
