--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -134,7 +134,7 @@
      list.push("Villa-07,@Rahul Pandey,@9672125813,@3,@Owner"); 
      list.push("Villa-09,@Raghvendra Sharma,@7976767857,@3,@Owner"); 
      list.push("Villa-10,@Jogendra Sachdeva,@9828080386,@3,@Owner"); 
-     list.push("Villa-11,@Kuldeep Ji,@9928499998,@5,@Owner"); 
+     list.push("Villa-11,@Sundeep Mahala,@9928499998,@5,@Owner"); 
      list.push("Villa-12,@Gaurav Kothari,@9982567222,@2,@Owner"); 
      list.push("Villa-13,@Anil Sharma,@9983344889,@4,@Owner"); 
      list.push("Villa-19,@Hitesh Ji,@9650978342,@3,@Owner"); 
