--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -141,7 +141,7 @@
          // Sr. No,	Collection/Expenditure Details,	From,	Amount,	Credit/Debit
         list.push("Previous function balance,Villa 65,4500,C");
         list.push("Collection ,Villa 65,57000,C");
-        list.push("PaushBada Extra member collection,Villa 65,400,C");
+        list.push("PaushBada Extra member collection from villa 24,Villa 65,400,C");
         list.push("Vegetables,Villa 65,-434,D");
         list.push("Disposal,Villa 65,-980,D");
         list.push("Gas ki Tanki,Villa 65,-2000,D");
