--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -168,7 +168,7 @@
   list.push("	Villa-29	,,,,,,,");
   list.push("	Villa-30	,,,,,,,");
   list.push("	Villa-31	,,,,,,,");
-  list.push("	Villa-32	,Vaibhav Tomar,,,,,,");
+  list.push("	Villa-32	,Vaibhav Tomar,1000,1000,1000,,,");
   list.push("	Villa-33	,Prakash Joshi,1000,1000,1000,,,");
   list.push("	Villa-34	,Vijay Meena,1000,1000,1000,,,");
   list.push("	Villa-35	,,,,,,,");
@@ -186,7 +186,7 @@
   list.push("	Villa-47	,Manoj Ji,1000,1000,1000,,,");
   list.push("	Villa-48	,R C Sharma,1000,1000,1000,,,");
   list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,Ankit Garg,,,,,,");
+  list.push("	Villa-50	,Ankit Garg,1000,1000,1000,,,");
   list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,,,");
   list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,,,");
   list.push("	Villa-53	,Rohit Jain,1000,1000,1000,,,");
