--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -195,6 +195,7 @@
         list.push("Holika dahan Puja Sweets,Villa 65,-900,D");
         list.push("Pandit ji dakshina,Villa 65,-500,D");
         list.push("Thandai Milk and Sugar,Villa 65,-1050,D");
+        list.push("Ram Navami,Villa 65,-1357,D");
         
 
          generateTable(list)
