--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -195,7 +195,8 @@
         list.push("Holika dahan Puja Sweets,Villa 65,-900,D");
         list.push("Pandit ji dakshina,Villa 65,-500,D");
         list.push("Thandai Milk and Sugar,Villa 65,-1050,D");
-        list.push("Ram Navami,Villa 65,-1357,D");
+        list.push("Ram Navami Milk & Dahi,Villa 65,-415,D");
+        list.push("Ram Navami Panchamrit samagri,Villa 65,-942,D");
         
 
          generateTable(list)
