--- a/index.html
+++ b/index.html
@@ -103,12 +103,15 @@
         </div>-->
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
+	   
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: Upcoming event Ram Navmi, 30th March 2023 </p>
+		<p> Event: Upcoming event ......... </p>
    </marquee>
+    <!--
    <marquee behavior="slide" direction="left">
 	<img src="img/Ramnavmi.jpg" width="260" height="170" />
 	 </marquee>
+	 -->
 <!--x
    <img id="myid" class="NO-CACHE" data-src="img/HolikaDhan.jpg"  width="90px" heigt="90px" alt="" border = "0" usemap = "#html" style="margin-bottom: 22px;">
 
