--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -175,7 +175,7 @@
   list.push("	Villa-34	,Vijay Meena,500,500,500,,,");
   list.push("	Villa-35	,,,,,,,");
   list.push("	Villa-36	,,,,,,,");
-  list.push("	Villa-37	,Gajendra Sharma,500,500,500,,,");
+  list.push("	Villa-37	,Gajendra Sharma,500,500,500,500,500,500");
   list.push("	Villa-38	,,,,,,,");
   list.push("	Villa-39	,Manish Salvi,500,500,500,,,");
   list.push("	Villa-40	,,,,,,,");
