--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: Upcoming event ......... </p>
+		<p> Event: Upcoming event, Van mahotsav: Tree plantation in Shubh Villa on 2nd July 2023 </p>
    </marquee>
     <!--
    <marquee behavior="slide" direction="left">
-	<img src="img/Ramnavmi.jpg" width="260" height="170" />
+	<img src="img/Ramnavmi.jpg" width="260" height="170" />s
 	 </marquee>
 	 -->
 <!--x
@@ -142,7 +142,7 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: rgb(6, 151, 38)">Every Month 2nd Sunday,Meeting Timing 10:00 AM To 11:00 AM "</p>
+							<p style="color: rgb(6, 151, 38)">Every Month 1st Sunday, Meeting start Time sharp 10:00 AM </p>
 							<!-- <p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--                              <p style="color:red">  Holi Celebration:  </p> -->
 							<!--                             <p>   10th March 2020 (09:00 AM)  </p> -->
