--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -173,7 +173,7 @@
   list.push("	Villa-34	,Vijay Meena,1000,1000,1000,,,");
   list.push("	Villa-35	,,,,,,,");
   list.push("	Villa-36	,,,,,,,");
-  list.push("	Villa-37	,Gajendra Sharma,1000,1000,1000,,,");
+  list.push("	Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000");
   list.push("	Villa-38	,,,,,,,");
   list.push("	Villa-39	,Manish Salvi,1000,1000,1000,,,");
   list.push("	Villa-40	,,,,,,,");
