--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -213,7 +213,7 @@
         list.push("Till previous month final balance ,Villa 65,5980,C");
         list.push("Collection ,Villa 65,1500,C");
         //list.push("C 1 ,Villa 65,10,C");
-        list.push("Samosa Cold drink on 30 April Metting,Villa 65,-1260,D");
+        list.push("Samosa Cold Drink on 30 April Meeting,Villa 65,-1260,D");
 
          generateTable(list)
          SetBalanceColor();
