--- a/MonthlyActivityFund.html
+++ b/MonthlyActivityFund.html
@@ -177,11 +177,11 @@
   list.push("	Villa-36	,,,,,,,");
   list.push("	Villa-37	,Gajendra Sharma,500,500,500,500,500,500");
   list.push("	Villa-38	,,,,,,,");
-  list.push("	Villa-39	,Manish Salvi,500,500,500,,,");
+  list.push("	Villa-39	,Manish Salvi,500,500,500,500,500,500");
   list.push("	Villa-40	,,,,,,,");
   list.push("	Villa-41	,,,,,,,");
   list.push("	Villa-42	,Prakash Ji,500,500,500,,,");
-  list.push("	Villa-43	,Arun Tripathi,500,500,500,,,");
+  list.push("	Villa-43	,Arun Tripathi,500,500,500,500,500,500");
   list.push("	Villa-44	,Ravindra Verma,500,500,500,,,,");
   list.push("	Villa-45	,Nand Singh Rajawat,500,500,500,,,");
   list.push("	Villa-46	,Vikas Mahala,500,500,500,,,");
